--- a/conf/web.xml
+++ b/conf/web.xml
@@ -90,11 +90,11 @@
     </filter>
     -->
 
-    <!-- O'Reilly MultiPart Filter -->
+    <!-- MultiPart Filter -->
     <filter>
         <filter-name>multipartFilter</filter-name>
-        <filter-class>com.oreilly.servlet.MultipartFilter</filter-class>
-        <!--
+        <filter-class>net.sourceforge.myfaces.custom.fileupload.MultipartFilter</filter-class>
+        <!-- DEPRECATED !
         <init-param>
             <param-name>uploadDir</param-name>
             <param-value>/tmp</param-value>
@@ -118,7 +118,7 @@
 
     <filter-mapping>
         <filter-name>multipartFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>*.jsf</url-pattern>
     </filter-mapping>
 
 
