--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -23,3 +23,4 @@ log4j.logger.net.sourceforge.myfaces.lifecycle=INFO
 log4j.logger.net.sourceforge.myfaces.taglib=INFO
 log4j.logger.net.sourceforge.myfaces.util.DebugUtils=INFO
 log4j.logger.net.sourceforge.myfaces.renderkit.html.HtmlResponseWriterImpl=WARN
+log4j.logger.net.sourceforge.myfaces.renderkit.html.HtmlRenderKitImpl=WARN
