--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -20,6 +20,7 @@ nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
 nav_Calendar        = Calendar
 nav_dataList        = Dynamic Lists
+nav_tree            = Tree
 
 #
 # buttons
