bug #945118 (Checkbox session state) fixed
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166777 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -62,6 +62,7 @@ discount_2_2 = My favourite Band
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Car type
 sort_carcolor = Car color
+sales_tax = Sales Tax
 
 label_country_name = Country
 label_country_iso = Iso-Code
