fix #952453: changed CONFIG_FILES context param to spec-compliant javax.faces.CONFIG_FILES
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166806 13f79535-47bb-0310-9956-ffa450edef68

--- a/conf/web.xml
+++ b/conf/web.xml
@@ -26,7 +26,7 @@
 <web-app>
 
     <context-param>
-        <param-name>javax.faces.application.CONFIG_FILES</param-name>
+        <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>
             /WEB-INF/examples-config.xml
         </param-value>
