--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -21,10 +21,10 @@ nav_TabbedPane      = Tabbed Pane
 nav_Calendar        = Calendar
 nav_dataList        = Dynamic Lists
 nav_tree            = Tree
+nav_Validate		= Validations
 
-#
 # buttons
-#
+
 button_save = Save
 button_apply = Apply
 button_cancel = Cancel
@@ -37,9 +37,9 @@ option_layout = Layout
 
 empty_selitem = Please select ...
 
-#
+
 # components examples
-#
+
 label_cars = Model
 label_colors = Colors
 label_extras = Extras
