--- a/src/cactus/web/WEB-INF/web.xml
+++ b/src/cactus/web/WEB-INF/web.xml
@@ -127,6 +127,13 @@
         <jsp-file>/jspRedirector.jsp</jsp-file>
     </servlet>
 
+    <servlet>
+        <servlet-name>ServletTestRunner</servlet-name>
+        <servlet-class>
+        org.apache.cactus.server.runner.ServletTestRunner
+        </servlet-class>
+    </servlet>
+
     <!-- Faces Servlet Mapping -->
 
     <!-- virtual path mapping -->
@@ -151,6 +158,11 @@
     <servlet-mapping>
         <servlet-name>JspRedirector</servlet-name>
         <url-pattern>/JspRedirector</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>ServletTestRunner</servlet-name>
+        <url-pattern>/ServletTestRunner</url-pattern>
     </servlet-mapping>
 
     <!-- Welcome files -->
