--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -22,6 +22,7 @@ nav_Calendar        = Calendar
 nav_dataList        = Dynamic Lists
 nav_tree            = Tree
 nav_Validate		= Validations
+nav_rdfTicker		= RdfTicker
 
 # buttons
 
