--- a/src/cactus/web/WEB-INF/web.xml
+++ b/src/cactus/web/WEB-INF/web.xml
@@ -24,6 +24,18 @@
   "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
+    
+   <context-param>
+        <param-name>javax.faces.CONFIG_FILES</param-name>
+        <param-value>
+            /WEB-INF/test-config.xml
+        </param-value>
+        <description>
+            Comma separated list of URIs of (additional) faces config files.
+            (e.g. /WEB-INF/my-config.xml)
+            See JSF 1.0 PRD2, 10.3.2
+        </description>
+    </context-param>
 
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
