--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -23,6 +23,7 @@ nav_dataList        = Dynamic Lists
 nav_tree            = Tree
 nav_Validate		= Validations
 nav_rdfTicker		= RdfTicker
+nva_dataScroller    = DataScroller
 
 # buttons
 
@@ -43,6 +44,7 @@ empty_selitem = Please select ...
 
 label_cars = Model
 label_colors = Colors
+label_color = Color
 label_extras = Extras
 button_calcprice = Calculate price
 msg_price = {0,choice,0#Configure your fondest wish!|1< Your price: \u20AC\u00A0{0}}
