bug fixed when running thru array
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166944 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -75,3 +75,5 @@ country_edit_table = Edit all Countries »
 dataList_simple = Simple list
 dataList_ul = Unordered list
 dataList_ol = Ordered list
+
+dataScroller_pages = Page {0} / {1}
