silly typos in ticker-component
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166976 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -22,7 +22,7 @@ nav_Calendar        = Calendar
 nav_dataList        = Dynamic Lists
 nav_tree            = Tree
 nav_Validate		= Validations
-nav_rdfTicker		= RdfTicker
+nav_rssTicker		= RssTicker
 nva_dataScroller    = DataScroller
 
 # buttons
