--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -23,7 +23,7 @@ nav_dataList        = Dynamic Lists
 nav_tree            = Tree
 nav_Validate		= Validations
 nav_rssTicker		= RssTicker
-nva_dataScroller    = DataScroller
+nav_dataScroller    = DataScroller
 
 # buttons
 
