changes in examples to show a list of cities under the countries (x:dataTable as child of x:dataTable)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167028 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -69,6 +69,7 @@ sales_tax = Sales Tax
 
 label_country_name = Country
 label_country_iso = Iso-Code
+label_country_cities = Cities
 new_country = Add New Country »
 country_edit_table = Edit all Countries »
 
