fix #992668: added int attribute + selectOneMenu to test
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167060 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -66,6 +66,7 @@ radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Car type
 sort_carcolor = Car color
 sales_tax = Sales Tax
+doors=Doors
 
 label_country_name = Country
 label_country_iso = Iso-Code
