--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -24,7 +24,7 @@ nav_tree            = Tree
 nav_Validate		= Validations
 nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
-
+nav_Date			= Date
 # buttons
 
 button_save = Save
@@ -79,3 +79,11 @@ dataList_ul = Unordered list
 dataList_ol = Ordered list
 
 dataScroller_pages = Page {0} / {1}
+date_comp_header=Date input tag
+date_comp_text1=Gimme a date
+date_comp_text2=Date is:
+date_comp_text3=Gimme a time
+date_comp_text4=Time is:
+date_comp_text5=Gimme a date & time
+date_comp_text6=Date time is:
+date_comp_button=Update
