calendar; revisited again for complete i18
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167086 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -87,3 +87,5 @@ date_comp_text4=Time is:
 date_comp_text5=Gimme a date & time
 date_comp_text6=Date time is:
 date_comp_button=Update
+popup_today_string=Today is :
+popup_week_string=Wk
