Fix welcome files
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167095 13f79535-47bb-0310-9956-ffa450edef68

--- a/conf/web.xml
+++ b/conf/web.xml
@@ -155,6 +155,7 @@
 
     <welcome-file-list>
         <welcome-file>index.jsf</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
