--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -25,6 +25,7 @@ nav_Validate		= Validations
 nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
 nav_Date			= Date
+nav_panelstack      = Panel Stack
 # buttons
 
 button_save = Save
@@ -89,3 +90,7 @@ date_comp_text6=Date time is:
 date_comp_button=Update
 popup_today_string=Today is :
 popup_week_string=Wk
+
+
+selectBoxPanel=SelectBox Panel
+treePanel=Tree Panel
