--- a/conf/web.xml
+++ b/conf/web.xml
@@ -88,6 +88,17 @@
         </description>
     </context-param>
 
+    <context-param>
+        <param-name>net.sourceforge.myfaces.AUTO_SCROLL</param-name>
+        <param-value>true</param-value>
+        <description>
+            If true, a javascript function will be rendered that is able to restore the
+            former vertical scroll on every request. Convenient feature if you have pages
+            with long lists and you do not want the browser page to always jump to the top
+            if you trigger a link or button action that stays on the same page.
+            Default: "false"
+        </description>
+    </context-param>
 
 
     <!-- WelcomeFile Filter -->
