#1010800 improve examples's i18n and Japanese support
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167244 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -32,6 +32,7 @@ button_save = Save
 button_apply = Apply
 button_cancel = Cancel
 button_delete = Delete
+button_submit = Submit
 
 alt_logo = MyFaces - the open source JSF implementation
 
@@ -39,6 +40,23 @@ option_lang = View this page in
 option_layout = Layout
 
 empty_selitem = Please select ...
+
+# sample1
+
+sample1_form = A Form
+sample1_another_form = Another Form
+sample1_validation = Validation
+sample1_number = Number
+sample1_add = Add them
+sample1_sub = Subtract them
+sample1_add_link = Add them by clicking this link
+sample1_sub_link = Subtract them by clicking this link
+sample1_result = Result
+sample1_text = Text
+sample1_uppercase = Make it uppercase
+sample1_lowercase = Make it lowercase
+sample1_disable_validation = Disable validation
+sample1_enable_validation = Enable validation
 
 
 # components examples
@@ -68,6 +86,11 @@ sort_cartype = Car type
 sort_carcolor = Car color
 sales_tax = Sales Tax
 doors=Doors
+
+validate_email = Email
+validate_credit = Credit Card
+validate_regexp = Regular Expression
+validate_equal = Equal
 
 label_country_name = Country
 label_country_iso = Iso-Code
