--- a/forrest.properties
+++ b/forrest.properties
@@ -11,4 +11,4 @@
 # Specifies name of Forrest skin to use
 #project.skin=forrest-site
 #project.skin=forrest-css
-project.skin=avalon-tigris
+#project.skin=avalon-tigris
