--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -6,6 +6,7 @@ nav_Home            = Home
 nav_Examples        = Examples
 nav_Sample_1        = Sample 1
 nav_Sample_2        = Sample 2
+nav_aliasBean       = Alias Bean
 nav_dataTable       = Master/Detail Example
 nav_sortTable       = Sortable Table
 nav_Documentation   = Documentation
