--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -20,6 +20,7 @@ nav_Selectbox       = Selectboxes
 nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
 nav_Calendar        = Calendar
+nav_Popup           = Popup
 nav_dataList        = Dynamic Lists
 nav_tree            = Tree
 nav_Validate		= Validations
