added new validator for ISBN codes
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167301 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -93,6 +93,7 @@ validate_email = Email
 validate_credit = Credit Card
 validate_regexp = Regular Expression
 validate_equal = Equal
+validate_isbn = ISBN
 
 label_country_name = Country
 label_country_iso = Iso-Code
