--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -28,6 +28,7 @@ nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
 nav_Date			= Date
 nav_panelstack      = Panel Stack
+nav_css             = Stylesheet
 # buttons
 
 button_save = Save
