--- a/webapps/examples/web/WEB-INF/classes/log4j.properties
+++ b/webapps/examples/web/WEB-INF/classes/log4j.properties
@@ -25,7 +25,7 @@ log4j.logger.org.apache.myfaces.util.DebugUtils=INFO
 log4j.logger.org.apache.myfaces.renderkit.html.HtmlResponseWriterImpl=WARN
 log4j.logger.org.apache.myfaces.renderkit.html.HtmlRenderKitImpl=WARN
 
-# myfaces extensinos loggers
+# myfaces extensions loggers
 log4j.logger.org.apache.myfaces.custom.aliasbean.AliasBean=DEBUG
 log4j.logger.org.apache.myfaces.custom.aliasbean.AliasBeanRenderer=DEBUG
 
