patched i18n for Japanese. was reported as MYFACES-25. Thanks to Takashi Okamoto for supporting this.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167313 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -61,6 +61,12 @@ sample1_lowercase = Make it lowercase
 sample1_disable_validation = Disable validation
 sample1_enable_validation = Enable validation
 
+# sample2
+
+sample2_add_quote = Add quotes
+sample2_remove_quote = Remove quotes
+sample2_select_quote = select a quote character
+sample2_select_unquote = select a unquote character
 
 # components examples
 
@@ -121,3 +127,25 @@ popup_week_string=Wk
 
 selectBoxPanel=SelectBox Panel
 treePanel=Tree Panel
+
+fileupload_title=File upload
+fileupload_gimmeimage=Gimme an image:
+fileupload_name=and give it a name: 
+fileupload_button=load it up
+fileupload_msg1=The image you loaded up:
+fileupload_msg2=Link to download (and save) the image :
+fileupload_msg3=Link to show the image directly:
+fileupload_dlimg=Download image
+
+tabbed_tab1=Tab1
+tabbed_tab2=Tab2
+tabbed_tab3=Tab3
+tabbed_visible1=Tab 1 visible
+tabbed_visible2=Tab 2 visible
+tabbed_visible3=Tab 3 visible
+tabbed_submit=Common submit button
+tabbed_common= A common paragraph 
+
+js_popup=Calendar as a JavaScript popup.
+js_form=Calendar as a form.
+js_submit=Submit
