applyed patch for i18nThanks to Takashi Okamoto for supporting this.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167318 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -149,3 +149,4 @@ tabbed_common= A common paragraph
 js_popup=Calendar as a JavaScript popup.
 js_form=Calendar as a form.
 js_submit=Submit
+css_msg=A simple test for the 
