--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -23,6 +23,7 @@ nav_Calendar        = Calendar
 nav_Popup           = Popup
 nav_dataList        = Dynamic Lists
 nav_tree            = Tree
+nav_treeTable       = Tree Table
 nav_Validate		= Validations
 nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
