--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -30,6 +30,7 @@ nav_dataScroller    = DataScroller
 nav_Date			= Date
 nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
+nav_newspaperTable  = Newspaper Table
 # buttons
 
 button_save = Save
