--- a/forrest.properties
+++ b/forrest.properties
@@ -9,6 +9,6 @@
 #project.name=my-project
 
 # Specifies name of Forrest skin to use
-#project.skin=forrest-site
+project.skin=forrest-site
 #project.skin=forrest-css
 #project.skin=avalon-tigris
