--- a/conf/web.xml
+++ b/conf/web.xml
@@ -127,10 +127,10 @@
 
     <!-- MultiPart Filter -->
     <filter>
-        <filter-name>multipartFilter</filter-name>
-        <filter-class>org.apache.myfaces.custom.fileupload.MultipartFilter</filter-class>
+        <filter-name>extensionsFilter</filter-name>
+        <filter-class>org.apache.myfaces.component.html.util.ExtensionsFilter</filter-class>
         <init-param>
-            <param-name>maxFileSize</param-name>
+            <param-name>uploadMaxFileSize</param-name>
             <param-value>100m</param-value>
             <description>Set the size limit for uploaded files.
                 Format: 10 - 10 bytes
@@ -140,7 +140,7 @@
             </description>
         </init-param>
         <init-param>
-            <param-name>thresholdSize</param-name>
+            <param-name>uploadThresholdSize</param-name>
             <param-value>100k</param-value>
             <description>Set the threshold size - files
                     below this limit are stored in memory, files above
@@ -153,7 +153,7 @@
             </description>
         </init-param>
 <!--        <init-param>
-            <param-name>repositoryPath</param-name>
+            <param-name>uploadRepositoryPath</param-name>
             <param-value>/temp</param-value>
             <description>Set the path where the intermediary files will be stored.
             </description>
@@ -178,7 +178,7 @@
 
 
     <filter-mapping>
-        <filter-name>multipartFilter</filter-name>
+        <filter-name>extensionsFilter</filter-name>
         <url-pattern>*.jsf</url-pattern>
     </filter-mapping>
 
