Additional maping for the Extensions filter.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167354 13f79535-47bb-0310-9956-ffa450edef68

--- a/conf/web.xml
+++ b/conf/web.xml
@@ -125,7 +125,7 @@
 <!--    </filter>-->
 
 
-    <!-- MultiPart Filter -->
+    <!-- Extensions Filter -->
     <filter>
         <filter-name>extensionsFilter</filter-name>
         <filter-class>org.apache.myfaces.component.html.util.ExtensionsFilter</filter-class>
@@ -180,6 +180,10 @@
     <filter-mapping>
         <filter-name>extensionsFilter</filter-name>
         <url-pattern>*.jsf</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>extensionsFilter</filter-name>
+        <url-pattern>/faces/*</url-pattern>
     </filter-mapping>
 
 
