Add loging for ExtensionsFilter
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167359 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -24,3 +24,4 @@ log4j.logger.org.apache.myfaces.taglib=INFO
 log4j.logger.org.apache.myfaces.util.DebugUtils=INFO
 log4j.logger.org.apache.myfaces.renderkit.html.HtmlResponseWriterImpl=WARN
 log4j.logger.org.apache.myfaces.renderkit.html.HtmlRenderKitImpl=WARN
+log4j.logger.org.apache.myfaces.component.html.util.AddResource=WARN
