--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -31,6 +31,7 @@ nav_Date			= Date
 nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
+nav_HtmlEditor		= Html Editor
 # buttons
 
 button_save = Save
