--- a/src/cactus/web/WEB-INF/web.xml
+++ b/src/cactus/web/WEB-INF/web.xml
@@ -90,7 +90,7 @@
     <!-- O'Reilly MultiPart Filter -->
     <filter>
         <filter-name>multipartFilter</filter-name>
-        <filter-class>org.apache.myfaces.custom.fileupload.MultipartFilter</filter-class>
+        <filter-class>org.apache.myfaces.component.html.util.ExtensionsFilter</filter-class>
     </filter>
 
     <!-- Cactus Filter -->
