--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -21,6 +21,7 @@ nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
 nav_Calendar        = Calendar
 nav_Popup           = Popup
+nav_JsListener      = JavaScript Listener
 nav_dataList        = Dynamic Lists
 nav_tree            = Tree
 nav_treeTable       = Tree Table
