--- a/webapps/examples/web/WEB-INF/classes/log4j.properties
+++ b/webapps/examples/web/WEB-INF/classes/log4j.properties
@@ -24,10 +24,4 @@ log4j.logger.org.apache.myfaces.taglib=INFO
 log4j.logger.org.apache.myfaces.util.DebugUtils=INFO
 log4j.logger.org.apache.myfaces.renderkit.html.HtmlResponseWriterImpl=WARN
 log4j.logger.org.apache.myfaces.renderkit.html.HtmlRenderKitImpl=WARN
-
-# myfaces extensions loggers
-log4j.logger.org.apache.myfaces.custom.aliasbean.AliasBean=DEBUG
-log4j.logger.org.apache.myfaces.custom.aliasbean.AliasBeanRenderer=DEBUG
-
-# myfaces-examples loggers
-org.apache.myfaces.examples.aliasexample.AliasHolder=DEBUG
+log4j.logger.org.apache.myfaces.component.html.util.AddResource=WARN
