--- a/conf/tiles/web.xml
+++ b/conf/tiles/web.xml
@@ -88,29 +88,41 @@
         <param-value>/WEB-INF/tiles.xml</param-value>
     </context-param>
 
-    
 
-    <!-- WelcomeFile Filter -->
-    <!--
-    <filter>
-        <filter-name>WelcomeFile Filter</filter-name>
-        <filter-class>org.apache.myfaces.webapp.filter.WelcomeFileFilter</filter-class>
-        <description>
-            Due to the manner in which the JSP / servlet lifecycle
-            functions, it is not currently possible to specify default
-            welcome files for a web application and map them to the
-            MyFacesServlet.  Normally they will be mapped to the
-            default servlet for the JSP container.  To offset this
-            shortcoming, we utilize a servlet Filter which examines
-            the URI of all incoming requests.
-        </description>
-    </filter>
-    -->
 
-    <!-- MultiPart Filter -->
+    <!-- Extensions Filter -->
     <filter>
-        <filter-name>multipartFilter</filter-name>
-        <filter-class>org.apache.myfaces.custom.fileupload.MultipartFilter</filter-class>
+        <filter-name>extensionsFilter</filter-name>
+        <filter-class>org.apache.myfaces.component.html.util.ExtensionsFilter</filter-class>
+        <init-param>
+            <param-name>uploadMaxFileSize</param-name>
+            <param-value>100m</param-value>
+            <description>Set the size limit for uploaded files.
+                Format: 10 - 10 bytes
+                        10k - 10 KB
+                        10m - 10 MB
+                        1g - 1 GB
+            </description>
+        </init-param>
+        <init-param>
+            <param-name>uploadThresholdSize</param-name>
+            <param-value>100k</param-value>
+            <description>Set the threshold size - files
+                    below this limit are stored in memory, files above
+                    this limit are stored on disk.
+
+                Format: 10 - 10 bytes
+                        10k - 10 KB
+                        10m - 10 MB
+                        1g - 1 GB
+            </description>
+        </init-param>
+<!--        <init-param>
+            <param-name>uploadRepositoryPath</param-name>
+            <param-value>/temp</param-value>
+            <description>Set the path where the intermediary files will be stored.
+            </description>
+        </init-param>-->
     </filter>
 
 
@@ -124,12 +136,20 @@
     </filter-mapping>
     -->
 
+<!--    <filter-mapping>-->
+<!--        <filter-name>javascriptDetector</filter-name>-->
+<!--        <url-pattern>/_javascriptDetector_</url-pattern>-->
+<!--    </filter-mapping>-->
+
+
     <filter-mapping>
-        <filter-name>multipartFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <filter-name>extensionsFilter</filter-name>
+        <url-pattern>*.jsf</url-pattern>
     </filter-mapping>
-
-
+    <filter-mapping>
+        <filter-name>extensionsFilter</filter-name>
+        <url-pattern>/faces/*</url-pattern>
+    </filter-mapping>
 
     <!-- Listener, that does all the startup work (configuration, init). -->
     <listener>
