changed web.xml for tiles-example
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167451 13f79535-47bb-0310-9956-ffa450edef68

--- a/conf/tiles/web.xml
+++ b/conf/tiles/web.xml
@@ -89,6 +89,11 @@
     </context-param>
 
 
+    <!-- JavaScriptDetector Filter -->
+<!--    <filter>-->
+<!--        <filter-name>javascriptDetector</filter-name>-->
+<!--        <filter-class>org.apache.myfaces.webapp.filter.JavaScriptDetectorFilter</filter-class>-->
+<!--    </filter>-->
 
     <!-- Extensions Filter -->
     <filter>
