dataScroller, add rowsCountVar, displayedRowsCountVar, firstRowIndexVar and lastRowIndexVar attributes.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167491 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -116,7 +116,7 @@ dataList_simple = Simple list
 dataList_ul = Unordered list
 dataList_ol = Ordered list
 
-dataScroller_pages = Page {0} / {1}
+dataScroller_pages = {0} Cars found, displaying {1} cars, from {2} to {3}. Page {4} / {5}
 date_comp_header=Date input tag
 date_comp_text1=Gimme a date
 date_comp_text2=Date is:
