added new component swapimage
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167505 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -34,6 +34,7 @@ nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
 nav_HtmlEditor		= Html Editor
+nav_swapimage       = SwapImage
 # buttons
 
 button_save = Save
