added patch form sean schofield. forceId for reuse of "legacy JavaScript" (MyFaces-70)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167510 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -34,6 +34,8 @@ nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
 nav_HtmlEditor		= Html Editor
+nav_forceId         = ForceId
+
 nav_swapimage       = SwapImage
 # buttons
 
@@ -156,3 +158,6 @@ js_popup=Calendar as a JavaScript popup.
 js_form=Calendar as a form.
 js_submit=Submit
 css_msg=A simple test for the 
+
+forceOne=Value 1
+forceTwo=Value 2 (with forceId)
