--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -35,6 +35,7 @@ nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
 nav_HtmlEditor		= Html Editor
 nav_forceId         = ForceId
+nav_selectOneCountry= Select a country box
 
 nav_swapimage       = SwapImage
 # buttons
