Sean Schofield's tree2 initial commit, with extensions filter enhancements.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167601 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages.properties
@@ -25,6 +25,7 @@ nav_Popup           = Popup
 nav_JsListener      = JavaScript Listener
 nav_dataList        = Dynamic Lists
 nav_tree            = Tree
+nav_tree2           = Tree2
 nav_treeTable       = Tree Table
 nav_Validate		= Validations
 nav_rssTicker		= RssTicker
