--- a/conf/blank/web.xml
+++ b/conf/blank/web.xml
@@ -34,7 +34,7 @@
     <context-param>
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>
-            /WEB-INF/blank-faces-config.xml
+            /WEB-INF/examples-config.xml
         </param-value>
         <description>
             Comma separated list of URIs of (additional) faces config files.
@@ -74,6 +74,23 @@
             i.e. additional line separators and whitespace will be written, that do not
             influence the HTML code.
             Default: "true"
+        </description>
+    </context-param>
+
+    <context-param>
+        <param-name>org.apache.myfaces.DETECT_JAVASCRIPT</param-name>
+        <param-value>false</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>org.apache.myfaces.AUTO_SCROLL</param-name>
+        <param-value>true</param-value>
+        <description>
+            If true, a javascript function will be rendered that is able to restore the
+            former vertical scroll on every request. Convenient feature if you have pages
+            with long lists and you do not want the browser page to always jump to the top
+            if you trigger a link or button action that stays on the same page.
+            Default: "false"
         </description>
     </context-param>
 
