added new crosstable component (x:columns). Contributed by Mathias Broekelmann
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167722 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/src/example/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/src/example/org/apache/myfaces/examples/resource/example_messages.properties
@@ -39,6 +39,8 @@ nav_forceId         = ForceId
 nav_selectOneCountry= Select a country box
 
 nav_swapimage       = SwapImage
+nav_crossDataTable  = Crosstable
+
 # buttons
 
 button_save = Save
@@ -163,3 +165,8 @@ css_msg=A simple test for the
 
 forceOne=Value 1
 forceTwo=Value 2 (with forceId)
+
+crosstable_field_column=column label
+crosstable_add_column=add a column
+crosstable_remove_column=remove the column
+crosstable_save_values=save values
