--- a/forrest.properties
+++ b/forrest.properties
@@ -6,7 +6,7 @@
 #forrest.echo=true
 
 # Project name (used to name .war file)
-#project.name=my-project
+project.name=myfaces
 
 # Specifies name of Forrest skin to use
 project.skin=forrest-site
