added ant file for site build via forrest
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167802 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -12,3 +12,6 @@ project.name=myfaces
 project.skin=forrest-site
 #project.skin=forrest-css
 #project.skin=avalon-tigris
+
+# Already prepared for future SVN repository structure
+project.site-dir=${basedir}/../site
