A little spring cleaning...
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167822 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/src/example/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/src/example/org/apache/myfaces/examples/resource/example_messages.properties
@@ -1,5 +1,5 @@
 welcome = Welcome to
-today = Today is the {0,date,short}.
+today = Today's date is {0,date,short}.
 
 
 nav_Home            = Home
@@ -78,7 +78,7 @@ sample1_enable_validation = Enable validation
 sample2_add_quote = Add quotes
 sample2_remove_quote = Remove quotes
 sample2_select_quote = select a quote character
-sample2_select_unquote = select a unquote character
+sample2_select_unquote = select an unquote character
 
 # components examples
 
@@ -87,7 +87,7 @@ label_colors = Colors
 label_color = Color
 label_extras = Extras
 button_calcprice = Calculate price
-msg_price = {0,choice,0#Configure your fondest wish!|1< Your price: \u20AC\u00A0{0}}
+msg_price = {0,choice,0#Configure your fondest wish!|1< Your price: \u20ac {0}}
 color_black = black
 color_blue = blue
 color_marine = marine blue
@@ -117,8 +117,8 @@ validate_isbn = ISBN
 label_country_name = Country
 label_country_iso = Iso-Code
 label_country_cities = Cities
-new_country = Add New Country »
-country_edit_table = Edit all Countries »
+new_country = Add New Country \uffbb
+country_edit_table = Edit all Countries \uffbb
 
 dataList_simple = Simple list
 dataList_ul = Unordered list
