--- a/webapps/simple/WEB-INF/web.xml
+++ b/webapps/simple/WEB-INF/web.xml
@@ -22,6 +22,16 @@
 
 <web-app>
 
+    <!-- This web.xml can be used during debugging, when there is no myfaces.jar
+        library available.
+
+        The faces-config.xml file (that is normally in the myfaces.jar) must be
+        copied to the /WEB-INF directory of the web context.
+
+        The TLDs (that are normally in the myfaces.jar) must be
+        copied to the /WEB-INF/lib directory of the web context.-->
+    <description>debug web.xml</description>
+
     <context-param>
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>
@@ -36,7 +46,7 @@
 
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-        <param-value>server</param-value>
+        <param-value>client</param-value>
         <description>
             State saving method: "client" or "server" (= default)
             See JSF Specification 2.5.2
@@ -56,34 +66,19 @@
             Default: "true"
         </description>
     </context-param>
-    
+
     <context-param>
         <param-name>org.apache.myfaces.DETECT_JAVASCRIPT</param-name>
         <param-value>false</param-value>
-        <description>
-            This parameter tells MyFaces if javascript code should be allowed in the
-            rendered HTML output.
-            If javascript is allowed, command_link anchors will have javascript code
-            that submits the corresponding form.
-            If javascript is not allowed, the state saving info and nested parameters
-            will be added as url parameters.
-            Default: "false"
-
-            Setting this param to true should be combined with STATE_SAVING_METHOD "server" for
-            best results.
-
-            This is an EXPERIMENTAL feature. You also have to enable the detector filter/filter mapping below to get
-            JavaScript detection working.
-        </description>
     </context-param>
-
+    
     <context-param>
         <param-name>org.apache.myfaces.PRETTY_HTML</param-name>
         <param-value>true</param-value>
         <description>
             If true, rendered HTML code will be formatted, so that it is "human readable".
             i.e. additional line separators and whitespace will be written, that do not
-            influence the HTML code.
+            influence the HTML code. 
             Default: "true"
         </description>
     </context-param>
@@ -95,7 +90,7 @@
             If true, a javascript function will be rendered that is able to restore the
             former vertical scroll on every request. Convenient feature if you have pages
             with long lists and you do not want the browser page to always jump to the top
-            if you trigger a link or button action that stays on the same page.
+            if you trigger a link or button action that stays on the same page. 
             Default: "false"
         </description>
     </context-param>
@@ -117,13 +112,6 @@
         </description>
     </filter>
     -->
-
-    <!-- JavaScriptDetector Filter -->
-<!--    <filter>-->
-<!--        <filter-name>javascriptDetector</filter-name>-->
-<!--        <filter-class>org.apache.myfaces.webapp.filter.JavaScriptDetectorFilter</filter-class>-->
-<!--    </filter>-->
-
 
     <!-- Extensions Filter -->
     <filter>
@@ -160,23 +148,6 @@
         </init-param>-->
     </filter>
 
-
-    <!-- Filter Mappings -->
-
-    <!-- see MyFaces Filter above for a description -->
-    <!--
-    <filter-mapping>
-        <filter-name>WelcomeFile Filter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    -->
-
-<!--    <filter-mapping>-->
-<!--        <filter-name>javascriptDetector</filter-name>-->
-<!--        <url-pattern>/_javascriptDetector_</url-pattern>-->
-<!--    </filter-mapping>-->
-
-
     <filter-mapping>
         <filter-name>extensionsFilter</filter-name>
         <url-pattern>*.jsf</url-pattern>
@@ -201,13 +172,6 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!-- source code servlet (will not work with JSF virtual path mapping) -->
-    <!--  this servlet is optional and for educational purposes only -->
-    <servlet>
-        <servlet-name>SourceCodeServlet</servlet-name>
-        <servlet-class>org.apache.myfaces.examples.servlet.SourceCodeServlet</servlet-class>
-    </servlet>
-
 
     <!-- Faces Servlet Mapping -->
 
@@ -226,17 +190,27 @@
     </servlet-mapping>
 
 
-    <servlet-mapping>
-        <servlet-name>SourceCodeServlet</servlet-name>
-        <url-pattern>*.source</url-pattern>
-    </servlet-mapping>
-
     <!-- Welcome files -->
 
     <welcome-file-list>
-        <welcome-file>index.jsf</welcome-file>
         <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+
+
+    <taglib>
+        <taglib-uri>http://java.sun.com/jsf/core</taglib-uri>
+        <taglib-location>lib/myfaces_core.tld</taglib-location>
+    </taglib>
+
+    <taglib>
+        <taglib-uri>http://java.sun.com/jsf/html</taglib-uri>
+        <taglib-location>lib/myfaces_html.tld</taglib-location>
+    </taglib>
+
+    <taglib>
+        <taglib-uri>http://myfaces.apache.org/extensions</taglib-uri>
+        <taglib-location>lib/myfaces_ext.tld</taglib-location>
+    </taglib>
 
 </web-app>
