--- a/webapps/simple/WEB-INF/web.xml
+++ b/webapps/simple/WEB-INF/web.xml
@@ -71,14 +71,14 @@
         <param-name>org.apache.myfaces.DETECT_JAVASCRIPT</param-name>
         <param-value>false</param-value>
     </context-param>
-    
+
     <context-param>
         <param-name>org.apache.myfaces.PRETTY_HTML</param-name>
         <param-value>true</param-value>
         <description>
             If true, rendered HTML code will be formatted, so that it is "human readable".
             i.e. additional line separators and whitespace will be written, that do not
-            influence the HTML code. 
+            influence the HTML code.
             Default: "true"
         </description>
     </context-param>
@@ -90,7 +90,7 @@
             If true, a javascript function will be rendered that is able to restore the
             former vertical scroll on every request. Convenient feature if you have pages
             with long lists and you do not want the browser page to always jump to the top
-            if you trigger a link or button action that stays on the same page. 
+            if you trigger a link or button action that stays on the same page.
             Default: "false"
         </description>
     </context-param>
@@ -172,6 +172,12 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <!-- source code servlet (will not work with JSF virtual path mapping) -->
+    <!--  this servlet is optional and for educational purposes only -->
+    <servlet>
+        <servlet-name>SourceCodeServlet</servlet-name>
+        <servlet-class>org.apache.myfaces.examples.servlet.SourceCodeServlet</servlet-class>
+    </servlet>
 
     <!-- Faces Servlet Mapping -->
 
@@ -189,6 +195,10 @@
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>SourceCodeServlet</servlet-name>
+        <url-pattern>*.source</url-pattern>
+    </servlet-mapping>
 
     <!-- Welcome files -->
 
