Updated .cvsignore to prevent Idea project files being incorporated by mistake
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@170970 13f79535-47bb-0310-9956-ffa450edef68

--- a/.cvsignore
+++ b/.cvsignore
@@ -7,20 +7,12 @@ release
 .classpath
 bin
 test-results
-myfaces-1.0.8-tiles-example.tgz
-myfaces-1.0.8-examples.tgz
-myfaces-1.0.8.tgz
-MyFaces.iws
-MyFaces.ipr
-MyFaces-Tiles.iml
-MyFaces.iml
-incubator-myfaces.iml
-incubator-myfaces.ipr
-incubator-myfaces.iws
-myfaces-1.0.8-src.tgz
+myfaces*.tgz
+*.iml
+*.ipr
+*.iws
 *.sig
 intellij
-myfaces-1.0.9.tgz
 *.jpx*
 *.library
 classes
