--- a/webapps/src/example/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/webapps/src/example/org/apache/myfaces/examples/resource/example_messages.properties
@@ -35,6 +35,7 @@ nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
 nav_InputHtml		= Html Editor
+nav_InputHtmlHelp	= Input Help
 nav_forceId         = ForceId
 nav_selectOneCountry= Select a country box
 
